--- a/src/assets/scss/_const.scss
+++ b/src/assets/scss/_const.scss
@@ -1,5 +1,7 @@
-$img: "/img";
-// $img: "/banners/orbis/img";
+ $img: "/img";
+ $path: "";
+//  $img: "/banners/orbis/img";
+//  $path: "/banners/orbis";
 
 $bg_color: #132634;
 
