--- a/src/assets/scss/form-elements/_checkbox.scss
+++ b/src/assets/scss/form-elements/_checkbox.scss
@@ -7,7 +7,7 @@ input[type="checkbox"] {
         text-align: left;
         cursor: pointer;
         padding: 0 0 0 26px;
-        max-width: 450px;
+        //max-width: 450px;
         font-size: 12px;
         line-height: 18px;
         min-height: 20px;
